[package]
name = "aoc"
version = "0.1.0"
authors = ["Luke Biddle <lukeandrewbiddle@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "star1.1"
path = "src/star_1.1.rs"

[[bin]]
name = "star1.2"
path = "src/star_1.2.rs"

[dependencies]
