[package]
name = "aoc"
version = "0.1.0"
authors = ["Luke Biddle <lukeandrewbiddle@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "star1_1"
path = "src/star_1.1.rs"

[[bin]]
name = "star1_2"
path = "src/star_1.2.rs"

[[bin]]
name = "star2_1"
path = "src/star_2.1.rs"

[[bin]]
name = "star2_2"
path = "src/star_2.2.rs"

[dependencies]
